Add grid of index.html
header, main

--- a/index.html
+++ b/index.html
@@ -2,11 +2,51 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title>Glaccy</title>
   </head>
+
   <body>
+    <header class="main-header">
+        <div class="logo-container">
+          <img src="#" alt="GlaccyShop">
+        </div>
+        <nav class="main-nav">
+          <ul class="site-navigation">
+            <li class="nav-catalog"><a href="#">Каталог</a></li>
+            <li class="nav-shipping_payment"><a href="#">Доставка и оплата</a></li>
+            <li class="nav-about_company"><a href="#">О компании</a></li>
+          </ul>
+          <ul class="user-navigation">
+            <li class="search"><a href="#"></a></li>
+            <li class="login-link"><a href="#">Вход</a></li>
+            <li class="basket"><a href="#"></a></li>
+          </ul>
+        </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <main>
+      <ul class="slider-container">
+        <li class="slider-item">
+          <section>
+            <p></p>
+            <img>
+            <button></button>
+          </section>
+        </li>
+        <li class="slider-item">
+          <section>
+            <p></p>
+            <img>
+            <button></button>
+          </section>
+        </li>
+        <li class="slider-item">
+          <section>
+            <p></p>
+            <img>
+            <button></button>
+          </section>
+        </li>
+      </ul>
+    </main>
   </body>
-</html>
