Make up index page Glaccy
See footer!

--- a/index.html
+++ b/index.html
@@ -1,52 +1,174 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Glaccy</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Glaccy</title>
+</head>
 
-  <body>
-    <header class="main-header">
-        <div class="logo-container">
-          <img src="#" alt="GlaccyShop">
-        </div>
-        <nav class="main-nav">
-          <ul class="site-navigation">
-            <li class="nav-catalog"><a href="#">Каталог</a></li>
-            <li class="nav-shipping_payment"><a href="#">Доставка и оплата</a></li>
-            <li class="nav-about_company"><a href="#">О компании</a></li>
-          </ul>
-          <ul class="user-navigation">
-            <li class="search"><a href="#"></a></li>
-            <li class="login-link"><a href="#">Вход</a></li>
-            <li class="basket"><a href="#"></a></li>
-          </ul>
-        </nav>
-    </header>
+<body>
+  <header class="main-header">
+    <div class="logo-container">
+      <img src="#" alt="GlaccyShop">
+    </div>
+    <nav class="main-nav">
+      <ul class="site-navigation">
+        <li class="nav-catalog"><a href="#">Каталог</a></li>
+        <li class="nav-shipping_payment"><a href="#">Доставка и оплата</a></li>
+        <li class="nav-about_company"><a href="#">О компании</a></li>
+      </ul>
+      <ul class="user-navigation">
+        <li class="search"><a href="#"></a></li>
+        <li class="login-link"><a href="#">Вход</a></li>
+        <li class="basket"><a href="#"></a></li>
+      </ul>
+    </nav>
+    <section>
+      <span class="header-timetable">С 10 до 20, ежедневно</span>
+      <span class="header-phone">8 812 450-25-25</span>
+    </section>
+  </header>
 
     <main>
-      <ul class="slider-container">
-        <li class="slider-item">
-          <section>
-            <p></p>
-            <img>
-            <button></button>
-          </section>
-        </li>
-        <li class="slider-item">
-          <section>
-            <p></p>
-            <img>
-            <button></button>
-          </section>
-        </li>
-        <li class="slider-item">
-          <section>
-            <p></p>
-            <img>
-            <button></button>
-          </section>
-        </li>
-      </ul>
+      <div class="slider-container">
+        <ul class="slider-list">
+          <li class="slider-item">
+            <section>
+              <p></p>
+              <img>
+              <button></button>
+            </section>
+          </li>
+          <li class="slider-item">
+            <section>
+              <p></p>
+              <img>
+              <button></button>
+            </section>
+          </li>
+          <li class="slider-item">
+            <section>
+              <p></p>
+              <img>
+              <button></button>
+            </section>
+          </li>
+        </ul>
+        <ul class="slider-nav">
+          <li class="slider-nav-item"></li>
+          <li class="slider-nav-item"></li>
+          <li class="slider-nav-item"></li>
+        </ul>
+      </div>
+
+      <section class="advertising-promothion advertising-promotion-left">
+        <p class="advertising-slogan"><b>Малинка даром!</b></p>
+        <p class="advertising-description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <button class="advertising-button">Хочу малинки!</button>
+      </section>
+      <section class="advertising-promothion advertising-promotion-right">
+        <p class="advertising-slogan"><b>Шоколадки даром!</b></p>
+        <p class="advertising-description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <button class="advertising-button">Хочу шоколадки!</button>
+      </section>
+
+      <div class="items-gallery">
+        <article class="item">
+          <img class="item-image" alt="" src="#">
+          <img class="item-hit" alt="Хит" src="#">
+          <p class-"item-price">310 Р/кг</p>
+          <p class="item-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+        </article>
+        <article class="item">
+          <img class="item-image" alt="" src="#">
+          <img class="item-hit" alt="Хит" src="#">
+          <p class-"item-price">380 Р/кг</p>
+          <p class="item-description">Сливочное-кофейное с кусочками шоколада</p>
+        </article>
+        <article class="item">
+          <img class="item-image" alt="" src="#">
+          <img class="item-hit" alt="Хит" src="#">
+          <p class-"item-price">355 Р/кг</p>
+          <p class="item-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
+        </article>
+        <article class="item">
+          <img class="item-image" alt="" src="#">
+          <img class="item-hit" alt="Хит" src="#">
+          <p class-"item-price">415 Р/кг</p>
+          <p class="item-description">Сливочное крем-брюле с карамельной подливкой</p>
+        </article>
+      </div>
+      <section>
+        <p class="about-us">Магазин Глейси - это онлайн и офлайн магазин по продаже собственного мороженого на развес</p>
+        <ul>
+          <li class="about-us-feature about-us-feature-equipment"></li>
+          <li class="about-us-feature about-us-feature-raw"></li>
+          <li class="about-us-feature about-us-feature-purchase"></li>
+          <li class="about-us-feature about-us-feature-delivery"></li>
+        </ul>
+      </section>
+
+      <article class="news-container">
+        <span class="news-preview">Новое в нашем блоге</span>
+        <h2><a href="">10 способов сервировки фруктовых щербетов к столу</a></h2>
+      </article>
+
+      <section class="subscribe-container">
+        <p class="subscribe-container-preview">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит.
+          Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)
+        </p>
+        <form>
+          <input type="text" id="feedback">
+          <label for="feedback">Электронная почта</label>
+          <input type="button" value="Отправить">
+        </form>
+      </section>
+
+      <div class="map-container">
+        <img src="" alt="Карта">
+        <section class="address-container">
+          <p>
+            Адрес главного офиса<br>
+            и офлайн магазина<br>
+            <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+          </p>
+          <p>Для заказов по телефону:<br>
+            <span>8&nbsp;812&nbsp;450-25-25</span><br>
+            (С 10 до 20 ежедневно)<br>
+          </p>
+          <a href="#">Форма обратной связи</a>
+        </section>
+      </div>
     </main>
-  </body>
+
+      <footer>
+        <div class="footer-social">
+          <ul>
+            <li class="social-button"><a href="#">Твиттер</a></li>
+            <li class="social-button"><a href="#">Инстаграм</a></li>
+            <li class="social-button"><a href="#">Фейсбук</a></li>
+            <li class="social-button"><a href="#">Вконтакте</a></li>
+          </ul>
+        </div>
+        <div class="footer-info">
+          <ul class="footer-info-items">
+            <li class="footer-info-item">
+              <a href="#">Для поставщиков</a>
+            </li>
+            <li class="footer-info-item">
+              <a href="#">О производстве</a>
+            </li>
+            <li class="footer-info-item">
+              <a href="#">Наши документы</a>
+            </li>
+            <li class="footer-info-item">
+              <a href="#">Экологические стандарты</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-htmlacademy">
+          <img src="" alt="HTML Academy">
+          <p>Сделано в <a href="#">HTML Academy 2017</a>
+          </p>
+        </div>
+      </footer>
+    </body>
