Change names of classes, footer's tags
Maxim loh

--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
       <div class="slider-container">
         <ul class="slider-list">
           <li class="slider-item">
-            <section>
+            <article>
               <p></p>
               <img>
               <button></button>
-            </section>
           </li>
           <li class="slider-item">
-            <section>
               <p></p>
+            </article>
               <img>
               <button></button>
-            </section>
+              <article>
           </li>
           <li class="slider-item">
-            <section>
+            <article>
+            </article>
               <p></p>
               <img>
               <button></button>
-            </section>
+            </article>
           </li>
         </ul>
         <ul class="slider-nav">
@@ -71,30 +71,30 @@
         <button class="advertising-button">Хочу шоколадки!</button>
       </section>
 
-      <div class="items-gallery">
-        <article class="item">
-          <img class="item-image" alt="" src="#">
-          <img class="item-hit" alt="Хит" src="#">
-          <p class-"item-price">310 Р/кг</p>
-          <p class="item-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+      <div class="hits-gallery">
+        <article class="hit-item">
+          <img class="hit-item-image" alt="" src="#">
+          <img class="hit-item" alt="Хит" src="#">
+          <p class-"hit-item-price">310 Р/кг</p>
+          <p class="hit-item-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
         </article>
-        <article class="item">
-          <img class="item-image" alt="" src="#">
-          <img class="item-hit" alt="Хит" src="#">
-          <p class-"item-price">380 Р/кг</p>
-          <p class="item-description">Сливочное-кофейное с кусочками шоколада</p>
+        <article class="hit-item">
+          <img class="hit-item-image" alt="" src="#">
+          <img class="hit-item" alt="Хит" src="#">
+          <p class-"hit-item-price">380 Р/кг</p>
+          <p class="hit-item-description">Сливочное-кофейное с кусочками шоколада</p>
         </article>
-        <article class="item">
-          <img class="item-image" alt="" src="#">
-          <img class="item-hit" alt="Хит" src="#">
-          <p class-"item-price">355 Р/кг</p>
-          <p class="item-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
+        <article class="hit-item">
+          <img class="hit-item-image" alt="" src="#">
+          <img class="hit-item" alt="Хит" src="#">
+          <p class-"hit-item-price">355 Р/кг</p>
+          <p class="hit-item-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
         </article>
-        <article class="item">
-          <img class="item-image" alt="" src="#">
-          <img class="item-hit" alt="Хит" src="#">
-          <p class-"item-price">415 Р/кг</p>
-          <p class="item-description">Сливочное крем-брюле с карамельной подливкой</p>
+        <article class="hit-item">
+          <img class="hit-item-image" alt="" src="#">
+          <img class="hit-item" alt="Хит" src="#">
+          <p class-"hit-item-price">415 Р/кг</p>
+          <p class="hit-item-description">Сливочное крем-брюле с карамельной подливкой</p>
         </article>
       </div>
       <section>
@@ -108,8 +108,8 @@
       </section>
 
       <article class="news-container">
-        <span class="news-preview">Новое в нашем блоге</span>
-        <h2><a href="">10 способов сервировки фруктовых щербетов к столу</a></h2>
+        <p class="news-preview">Новое в нашем блоге</p>
+        <h3><a href="">10 способов сервировки фруктовых щербетов к столу</a></h3>
       </article>
 
       <section class="subscribe-container">
@@ -131,7 +131,8 @@
             и офлайн магазина<br>
             <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
           </p>
-          <p>Для заказов по телефону:<br>
+          <p>
+            Для заказов по телефону:<br>
             <span>8&nbsp;812&nbsp;450-25-25</span><br>
             (С 10 до 20 ежедневно)<br>
           </p>
@@ -141,15 +142,15 @@
     </main>
 
       <footer>
-        <div class="footer-social">
+        <section class="footer-social">
           <ul>
             <li class="social-button"><a href="#">Твиттер</a></li>
             <li class="social-button"><a href="#">Инстаграм</a></li>
             <li class="social-button"><a href="#">Фейсбук</a></li>
             <li class="social-button"><a href="#">Вконтакте</a></li>
           </ul>
-        </div>
-        <div class="footer-info">
+        </section>
+        <section class="footer-info">
           <ul class="footer-info-items">
             <li class="footer-info-item">
               <a href="#">Для поставщиков</a>
@@ -164,11 +165,11 @@
               <a href="#">Экологические стандарты</a>
             </li>
           </ul>
-        </div>
-        <div class="footer-htmlacademy">
+        </section>
+        <section class="footer-htmlacademy">
           <img src="" alt="HTML Academy">
           <p>Сделано в <a href="#">HTML Academy 2017</a>
           </p>
-        </div>
+        </section>
       </footer>
     </body>
