Mark up catalog page & correct index

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
               <p></p>
               <img>
               <button></button>
-          </li>
-          <li class="slider-item">
-              <p></p>
             </article>
-              <img>
-              <button></button>
-              <article>
           </li>
           <li class="slider-item">
             <article>
+              <p></p>
+              <img>
+              <button></button>
             </article>
+          </li>
+          <li class="slider-item">
+            <article>
               <p></p>
               <img>
               <button></button>
@@ -71,30 +71,30 @@
         <button class="advertising-button">Хочу шоколадки!</button>
       </section>
 
-      <div class="hits-gallery">
+      <div class="hits-list">
         <article class="hit-item">
-          <img class="hit-item-image" alt="" src="#">
+          <img class="icecream-item-image" alt="" src="#">
           <img class="hit-item" alt="Хит" src="#">
           <p class-"hit-item-price">310 Р/кг</p>
           <p class="hit-item-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
         </article>
         <article class="hit-item">
-          <img class="hit-item-image" alt="" src="#">
-          <img class="hit-item" alt="Хит" src="#">
-          <p class-"hit-item-price">380 Р/кг</p>
-          <p class="hit-item-description">Сливочное-кофейное с кусочками шоколада</p>
+          <img class="icecream-item-image" alt="" src="#">
+          <img class="hit-image" alt="Хит" src="#">
+          <p class-"icecream-item-price">380 Р/кг</p>
+          <p class="icecream-item-description">Сливочное-кофейное с кусочками шоколада</p>
         </article>
         <article class="hit-item">
-          <img class="hit-item-image" alt="" src="#">
-          <img class="hit-item" alt="Хит" src="#">
-          <p class-"hit-item-price">355 Р/кг</p>
-          <p class="hit-item-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
+          <img class="icecream-item-image" alt="" src="#">
+          <img class="hit-image" alt="Хит" src="#">
+          <p class-"icecream-item-price">355 Р/кг</p>
+          <p class="icecream-item-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
         </article>
         <article class="hit-item">
-          <img class="hit-item-image" alt="" src="#">
-          <img class="hit-item" alt="Хит" src="#">
-          <p class-"hit-item-price">415 Р/кг</p>
-          <p class="hit-item-description">Сливочное крем-брюле с карамельной подливкой</p>
+          <img class="icecream-item-image" alt="" src="#">
+          <img class="hit-image" alt="Хит" src="#">
+          <p class-"icecream-item-price">415 Р/кг</p>
+          <p class="icecream-item-description">Сливочное крем-брюле с карамельной подливкой</p>
         </article>
       </div>
       <section>
