Add h2 in articles
Catalog of icecream

--- a/catalog.html
+++ b/catalog.html
@@ -109,66 +109,66 @@
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">310 Р/кг</p>
-          <p class="icecream-item-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+          <h2 class="icecream-item-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">380 Р/кг</p>
-          <p class="icecream-item-description">Сливочное-кофейное с кусочками шоколада</p>
+          <h2 class="icecream-item-description">Сливочное-кофейное с кусочками шоколада</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">355 Р/кг</p>
-          <p class="icecream-item-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
+          <h2 class="icecream-item-description">Сливочно-клубничное с присыпкой из белого шоколада</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">415 Р/кг</p>
-          <p class="icecream-item-description">Сливочное крем-брюле с карамельной подливкой</p>
+          <h2 class="icecream-item-description">Сливочное крем-брюле с карамельной подливкой</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">325 Р/кг</p>
-          <p class="icecream-item-description">Сливочное с брусничным джемом</p>
+          <h2 class="icecream-item-description">Сливочное с брусничным джемом</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">410 Р/кг</p>
-          <p class="icecream-item-description">Сливочное-черничное с цельными ягодами черники</p>
+          <h2 class="icecream-item-description">Сливочное-черничное с цельными ягодами черники</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">375 Р/кг</p>
-          <p class="icecream-item-description">Сливочно-лимонное с карамельной присыпкой</p>
+          <h2 class="icecream-item-description">Сливочно-лимонное с карамельной присыпкой</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">320 Р/кг</p>
-          <p class="icecream-item-description">Сливочное с шоколадной стружкой</p>
+          <h2 class="icecream-item-description">Сливочное с шоколадной стружкой</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">440 Р/кг</p>
-          <p class="icecream-item-description">Сливочно-ванильное с кусочками шоколада</p>
+          <h2 class="icecream-item-description">Сливочно-ванильное с кусочками шоколада</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">435 Р/кг</p>
-          <p class="icecream-item-description">Сливочное с ментоловым сиропом</p>
+          <h2 class="icecream-item-description">Сливочное с ментоловым сиропом</p>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">355 Р/кг</p>
-          <p class="icecream-item-description">Сливочное с кусочками темного шоколада</p>
+          <h2 class="icecream-item-description">Сливочное с кусочками темного шоколада</h2>
         </article>
         <article class="icecream-item">
           <img class="icecream-item-image" alt="" src="#">
           <p class-"icecream-item-price">420 Р/кг</p>
-          <p class="icecream-item-description">Сливочное с мятным сиропом</p>
+          <h2 class="icecream-item-description">Сливочное с мятным сиропом</h2>
         </article>
       </div>
 
-      <div class="pages-slider">
+      <div class="paginator">
         <ul>
           <li>
             <a href="#">previous</a>
